--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,20 +1,193 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <title>My First Page</title>
-    <link rel="stylesheet" href="/css/style.css">
-  </head>
-  <body>
-    <nav>
-      <a href="/">Home</a>
-    </nav>
-    <h1>{{ post.url }}</h1>
-    <section>
-      This is the content of my page
-    </section>
-    <footer>
-      &copy; to me
-    </footer>
-  </body>
+{% include headP.html %}
+<body id="body">
+    {% include header.html %}
+
+    <main>
+        <div class="container">
+            <div class="pagina-post" style="background-image: url('{{page.urlImage}}{%filmeAPI {{page.urlCapa}}%}');">
+                <div class="bg-pelicula">
+                    <div id="imgPoster" class="img-post">
+                        <div class="assistir-button">Assistir</div>
+                    </div>
+                    <div class="info-filme">
+                        <h1>{{ page.title }}</h1>
+                        <span><span id="dataFilme"></span>(BR) &bull; <span id="setCategorias"></span> &bull; <span id="filmeTemp"></span></span>
+                        <div class="buttons-filme">
+                            <div class="avaliacao-area">
+                                <a target="_blank" href="https://www.themoviedb.org/movie/{{page.tmdbId}}"></a>
+                                <div class="avaliacao-button"><span id="tmdbAvaliacao"></span></div>
+                                <p>Avaliação TMDB</p>
+                            </div><!--avaliacao-container-->
+                            <div class="share-area">
+                                <div class="share-button"></div>
+                                <p>Compartilhar</p>
+                            </div>
+                        </div><!--buttons-filme-->
+                        <div class="sinopse">
+                            <h2 id="tagline"></h2>
+                            <span>Sinopse:</span>
+                            <p id="sinopse"></p>
+                        </div><!--sinopse-->
+                        <div class="players-area">
+                            <span>PLAYERS DISPONÍVEIS</span>
+                            <div class="line"></div>
+                            <div id="players" class="players">
+                                {{ content }}
+                            </div>
+                        </div>
+                    </div>
+                    <div class="clear"></div>
+                </div><!--bg-pelicula-->
+
+
+            </div>
+
+
+            <div id="filmeArea" class="filme-area">
+                <div id="closeFilmeArea" class="close">X</div>
+                <div style="
+                    position: absolute;
+                    top: calc(50% - 4px);
+                    left: calc(50% - 100px);
+                    background-color: rgba(255, 0, 0, 0);
+                    width: 200px;
+                    font-size: 20px;
+                    font-weight: 600;
+                    color: #ffc267;
+                    text-transform: uppercase;
+                    z-index: -1;
+                ">Carregando Player...</div>
+                <div id="embedArea" class="embed-area"></div>
+            </div>
+
+            <div id="share" class="share">
+                <div id="closeShare" class="close">X</div>
+                <div class="whatsapp"><a target="_blank" href="https://api.whatsapp.com/send?text={{ site.url }}{{ page.url }}"></a></div>
+                <div class="facebook"><a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://jekyllrb.com/docs/liquid/filters/"></a></div>
+            </div>
+
+
+        </div><!--Container-->
+    </main>
+
+    {% include footerP.html %}
+    
+    <script>
+        const objetoFilme = `{%filmeAPI {{page.apiArrey}}%}`.split('--')
+        //console.log(objetoFilme)
+        document.getElementById('imgPoster')
+        .style.backgroundImage = `url('{{page.urlImage}}${objetoFilme[7]}')` //Setar imagemPoster
+
+        document.getElementById('dataFilme')
+
+        .innerHTML = setDataFilme()
+
+        document.getElementById('filmeTemp')
+
+        .innerHTML = converter(objetoFilme[3]) //Setar duração
+
+        document.getElementById('tmdbAvaliacao')
+
+        .innerHTML = objetoFilme[5].replace('.','') +  //Setar avaliação
+
+        `<span style="font-size: 10px;position: relative;top: -7px;">%</span>`
+
+       if (objetoFilme[2].length > 1) {
+        document.getElementById('tagline').innerHTML = objetoFilme[2]
+       } else {
+        document.getElementById('tagline').remove()
+        console.log('tagline ausente')
+       } //Setar a tagline
+       
+        document.getElementById('sinopse').innerHTML = objetoFilme[1] //Setar a sinopse
+
+        document.getElementById('setCategorias').innerHTML = getCategorias()
+
+        function setDataFilme() {
+            let arrey = objetoFilme[4].split('-').reverse()
+            let data = `${arrey[0]}/${arrey[1]}/${arrey[2]} `
+            return data;
+        }
+
+        function getCategorias() {
+            const getCategorias = `{%filmeAPI {{page.apiArrey}}%}`.split('--')[8].split(',')
+            var categoriasArrey = []
+            
+            for (indice in getCategorias) {
+                if (getCategorias[indice].indexOf('name') > 0) {
+                    categoriasArrey.push(getCategorias[indice]
+                    .replace('"name"=>"','')
+                    .replace('"}','')
+                    .replace(']',''))
+                }
+            }
+           return categoriasArrey.join(',')
+        }
+    </script>
+    
+    <script>  //scripts de players
+         var player4='{{page.player4}}';var player3='{{page.player3}}';var player2='{{page.player2}}';var player1='{{page.player1}}';
+
+        const players = document.getElementById('players')
+ 
+        const iframeHtml = function(player) {
+            return `<iframe id="iframe" autoplay; picture-in-picture allowfullscreen scrolling="no" src="${player}" frameborder="0"></iframe>`
+        }
+
+        if (player1 != '') {
+            players.innerHTML += `<div class="player" onclick="ClickPlayer('${player1}')" style="background-image: url('{{page.urlImage}}{%filmeAPI {{page.urlCapa}}%}');">
+                                    <div class="play"></div>
+                                    <div class="pelicula"></div>
+                                 </div>`
+        }
+        if (player2 != '') {
+            players.innerHTML += `<div class="player" onclick="ClickPlayer('${player2}')" style="background-image: url('{{page.urlImage}}{%filmeAPI {{page.urlCapa}}%}');">
+                                    <div class="play"></div>
+                                    <div class="pelicula"></div>
+                                 </div>`
+        }
+        if (player3 != '') {
+            players.innerHTML += `<div class="player" onclick="ClickPlayer('${player3}')" style="background-image: url('{{page.urlImage}}{%filmeAPI {{page.urlCapa}}%}');">
+                                    <div class="play"></div>
+                                    <div class="pelicula"></div>
+                                 </div>`
+        }
+        if (player4 != '') {
+            players.innerHTML += `<div class="player" onclick="ClickPlayer('${player4}')" style="background-image: url('{{page.urlImage}}{%filmeAPI {{page.urlCapa}}%}');">
+                                    <div class="play"></div>
+                                    <div class="pelicula"></div>
+                                 </div>`
+        }
+
+        $('#closeShare').click(function() {
+            $('#share').fadeOut(500, 'swing')
+        })
+        $('.share-area').click(function() {
+            $('#share').fadeIn(500, 'swing').css('display', 'flex')
+        })
+
+        
+        $('#closeFilmeArea').click(function() {
+            $('#filmeArea').fadeOut(500, 'swing')
+            $('iframe').remove()
+        })
+        $('.assistir-button').click(function() {
+            $('html, body').stop().animate({
+                scrollTop: players.offsetTop - 150
+            },700)
+
+        })
+
+        function ClickPlayer(src) {
+            $('#filmeArea').fadeIn(500, 'swing', function() {
+                $('#embedArea').html(iframeHtml(src))
+            })
+        }
+
+    </script>
+
+<script defer src="/assets/js/styleDefault.js"></script>
+</body>
 </html>
